src/objects/UI_Programme__c.object
<CustomObject>
    <fields>
        <fullName>Area__c</fullName>
        <inlineHelpText>The type of activity for this Project/Programme (NOT geographic area)</inlineHelpText>
        <label>Area</label>
        <picklist>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaigning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awareness raising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fundraising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Governance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misc</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>What is this Project/Programme about? What is it trying to achieve, what components does it have, what are the aims, the success criteria, time frame etc</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Focus__c</fullName>
        <inlineHelpText>Is the Project/Programme primarily externally or internally focused?</inlineHelpText>
        <label>Focus</label>
        <picklist>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Organisation__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Is there an external organisation acting as lead, driving this activity (e.g. a council). Leave blank if the Society is the lead organisation.</inlineHelpText>
        <label>Partner Organisation</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Involvement Projects/Programmes</relationshipLabel>
        <relationshipName>User_Involvement_Programmes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Is the Project/Programme still active, or has it finished ?</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>User Involvement Project/Programme</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Area__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Awareness</fullName>
        <columns>NAME</columns>
        <columns>Area__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Area__c</field>
            <operation>equals</operation>
            <value>Awareness raising</value>
        </filters>
        <label>Awareness raising</label>
    </listViews>
    <listViews>
        <fullName>Campaigning</fullName>
        <columns>NAME</columns>
        <columns>Area__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Area__c</field>
            <operation>equals</operation>
            <value>Campaigning</value>
        </filters>
        <label>Campaigning</label>
    </listViews>
    <listViews>
        <fullName>Fundraising</fullName>
        <columns>NAME</columns>
        <columns>Area__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Area__c</field>
            <operation>equals</operation>
            <value>Fundraising</value>
        </filters>
        <label>Fundraising</label>
    </listViews>
    <listViews>
        <fullName>Governance</fullName>
        <columns>NAME</columns>
        <columns>Area__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Area__c</field>
            <operation>equals</operation>
            <value>Governance</value>
        </filters>
        <label>Governance</label>
    </listViews>
    <listViews>
        <fullName>Media</fullName>
        <columns>NAME</columns>
        <columns>Area__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Area__c</field>
            <operation>equals</operation>
            <value>Media</value>
        </filters>
        <label>Media</label>
    </listViews>
    <listViews>
        <fullName>Misc</fullName>
        <columns>NAME</columns>
        <columns>Area__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Area__c</field>
            <operation>equals</operation>
            <value>Misc</value>
        </filters>
        <label>Misc</label>
    </listViews>
    <listViews>
        <fullName>Recruitment</fullName>
        <columns>NAME</columns>
        <columns>Area__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Area__c</field>
            <operation>equals</operation>
            <value>Recruitment</value>
        </filters>
        <label>Recruitment</label>
    </listViews>
    <listViews>
        <fullName>Research</fullName>
        <columns>NAME</columns>
        <columns>Area__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Area__c</field>
            <operation>equals</operation>
            <value>Research</value>
        </filters>
        <label>Research</label>
    </listViews>
    <listViews>
        <fullName>Service_Development</fullName>
        <columns>NAME</columns>
        <columns>Area__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Area__c</field>
            <operation>equals</operation>
            <value>Service Development</value>
        </filters>
        <label>Service Development</label>
    </listViews>
    <listViews>
        <fullName>Training</fullName>
        <columns>NAME</columns>
        <columns>Area__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Area__c</field>
            <operation>equals</operation>
            <value>Training</value>
        </filters>
        <label>Training</label>
    </listViews>
    <listViews>
        <fullName>Working_Groups</fullName>
        <columns>NAME</columns>
        <columns>Area__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Area__c</field>
            <operation>equals</operation>
            <value>Working groups</value>
        </filters>
        <label>Working groups</label>
    </listViews>
    <nameField>
        <label>Project/Programme Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Involvement Projects/Programmes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>